# IGVC2017

./: .gitignore  Manual_Drive.py  Motors  README.md
2016_code/controls/: GPIO_test.py  GPIO_test2.py  GPIO_test3.py  LMS_read.py  LMS_setup.py  motor_control.py  motor_control2.py  motor_control3.py  pwm_test.py  pwm_test2.py  (+4 more)
2016_code/testCamera/: CMakeCache.txt  CMakeLists.txt  CornerDetection.py  IPM.py  IPM70.py  Makefile  VideoCapture  WhiteLineMapping.py  cmake_install.cmake  gethsv.py  imgproc.py  lineDetection.py  perspectivetransform.py  realWorldPoints.py  test_video.py  testcam.py  testtransform.py
2016_code/testCamera/previousTests/: test1.jpg.odg  test1.odg
A_Star_tests/: AStar.py  test_astar.py
Avoidance/: AStar.py  Avoidance.py  Avoidance_old.py  Map.py  Vision_sim.py
Code/: AStar.py  Avoidance.py  Camera.py  Compass.py  Driver.py  GPS.py  LIDAR.py  LMS.py  Motors.py  Sensors.py  usb_identify.sh
Filtering/: ExtendedKalmanFilter.py  Filtering.py  GPS.py  KF2.py
LMS_tests/: LMS_setup.py  LMS_test.py
compass_tests/: Compass.py  CompassCalibrate.py  config.txt  run_compass.py  test_compass.py  test_compassV2.py
first_tests/: speed_test.py  test.py
gpio_tests/: GPIO.py  gpio1.py  interrupt.py  motor_test.py  pwm.py  servo_test.py  test_Compass.py
gps_tests/: GPS.py  GPS_Consumer.py  GPS_Test.py
image_processing_tests/: Camera.py  camera_test.py  test.py  test_dual_camera.py
motors_tests/: Manual_Drive.py  Motors.py
multiprocessing_tests/: Consumer.py  Driver.py  Producer.py
threading_tests/: Consumer.py  Driver.py  Producer.py
(+3 files in other folders)
