cmake_minimum_required(VERSION 3.0.0)
project(camera)
find_package(OpenCV REQUIRED)
message(STATUS "OpenCV library status:")
message(STATUS "    version: ${OpenCV_VERSION}")
message(STATUS "    libraries: ${OpenCV_LIBS}")
message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
include_directories(${OpenCV_INCLUDE_DIRS}/opencv2)
add_executable(camera testcam.py)
target_link_libraries(camera ${OpenCV_LIBS})
